[Refactor] get userRole 수정